2000-05-23  OKUJI Yoshinori  <okuji@gnu.org>

	* netboot/fsys_tftp.c (tftp_dir): Append "0\0" to the request
	string, because the "tsize" option must be followed by zero,
	according to RFC 2349.
	
2000-05-22  OKUJI Yoshinori  <okuji@gnu.org>

	Synchronize the documentation with the code.
	
	* docs/user-ref.texi: Added ReiserFS as a supported filesystem.
	Updated the descriptions about `password', `install', `kernel',
	and `setup'.
	Added a description about `lock'.
	Added descriptions about ERR_UNALIGNED and ERR_PRIVILEGED.
	Added a description about the option `--force-lba' of
	the program `grub-install'.
	* docs/tutorial.texi: Updated the subsection for NetBSD.
	
2000-05-21  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/asm.S (set_int13_handler): Don't use MBI to get the
	lower memory size. Instead, decrease it in the BIOS memory
	directly and set %eax to it, since MBI.MEM_LOWER may not be the
	same as [0x413] any longer due to the previous change.

	* grub/asmstub.c (CONVENTIONAL_MEMSIZE): Changed to 640 * 1024
	from 640. You didn't like the inconsistency between
	EXTENDED_MEMSIZE and CONVENTIONAL_MEMSIZE, did you?
	(get_memsize): Return CONVENTIONAL_MEMSIZE >> 10 instead of
	CONVENTIONAL_MEMSIZE, if TYPE is zero.
	(get_eisamemsize): Return EXTENDED_MEMSIZE >> 10 instead of
	EXTENDED_MEMSIZE / 1024. Just a cosmetic change.
	(MMAR_DESC_LENGTH): New macro. Defined as 20.
	(get_mmap_entry): Define a new variable DESC_TABLE statically, 
	and copy the CONTth entry to *DESC if CONT is a correct index.
	
2000-05-21  Chip Salzenberg  <chip@valinux.com>

	* stage2/common.c (mmap_avail_at): New function, abstracted out
	of init_bios_info, to scan E820 memory map.
	(init_bios_info): Use mmap_avail_at for _both_ MBI.MEM_UPPER and
	MBI.MEM_LOWER.

2000-05-17  OKUJI Yoshinori  <okuji@gnu.org>

	Update the network support to Etherboot-4.6.1.

	* netboot/config.c (pci_nic_list) [INCLUDE_TULIP]: Added an
	entry for Davicom 9102.
	* netboot/epic100.c: Just copied.